chore: Swagger Config