@@ -1,26 +1,14 @@
 package dekku.spring_dekku.global.config.swagger;
 
-import io.swagger.v3.oas.annotations.OpenAPIDefinition;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.servers.Server;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
-@OpenAPIDefinition(
-        servers = {
-                @io.swagger.v3.oas.annotations.servers.Server(url="http://localhost:8080/", description = "Default Server url")
-        },
-        info = @io.swagger.v3.oas.annotations.info.Info(
-                title = "Dekku API 명세서",
-                description = "Dekku API 명세서 입니다.",
-                version = "v1.0.0"
-        )
-)
 public class SwaggerConfig {
 
     @Bean
@@ -30,19 +18,18 @@ public class SwaggerConfig {
         localServer.setDescription("local");
         localServer.setUrl("http://localhost");
 
-
         return new OpenAPI()
                 .info(getInfo())
-                .servers(Arrays.asList(localServer));
+                .servers(List.of(localServer)); // Arrays.asList() => List.of()
 
     }
 
     private Info getInfo() {
         return new Info()
                 .title("SSAFY Dekku API")
-                .description("SSAFY Dekku DOCS");
+                .description("SSAFY Dekku DOCS")
+                .version("1.0.0");
     }
-
 
     // @Bean
     // public GroupedOpenApi securityGroup() {
